--- a/app/package.json
+++ b/app/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "react-router": "^3.0.0",
     "react-scripts": "0.7.0"
   },
   "dependencies": {
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
+  },
+  "devDependencies": {
+    "react-router": "4.0.0-alpha.3"
   },
   "scripts": {
     "start": "react-scripts start",
