--- a/app/package.json
+++ b/app/package.json
@@ -3,15 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-router": "^3.0.0",
-    "react-scripts": "0.7.0"
+    "react-router": "4.0.0-alpha.3"
   },
   "dependencies": {
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
-  },
-  "devDependencies": {
-    "react-router": "4.0.0-alpha.3"
+    "react-dom": "^15.3.2",
+    "react-scripts": "^0.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
