--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "sass": "sass --watch ./src/sass/index.scss:./src/index.css"
+    "sass": "sass --watch ./src/sass/components:./src/css/components"
   }
 }
