--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.2",
     "node-fetch": "^1.6.3",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.3.2",
     "react-scripts": "^0.7.0"
   },
