--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.3.2",
+    "react-router": "4.0.0-alpha.3",
     "react-scripts": "^0.7.0"
   },
   "scripts": {
